# tests

./: .gitattributes  .gitignore  LICENSE  README.md  readme.md
abstract/: Makefile  lele_test_abstract.cpp
algorithm/: file1  file2  insert_sort.cpp  lele_test_algorithm.cpp  lele_test_heap_sort.cpp  lele_test_linklist.cpp  lele_test_merge.cpp  lele_test_tree.cpp
assert/: lele_test_assert.cpp
autoguard/: README.md  lele_test_autoguard.cpp
bak/: key.bin.enc
base64/: Makefile
bash/: README.md
c-cpp/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
c-cpp/tests/: CMakeLists.txt  GTestCase.cpp  GTests.cpp  HelloWorldTests2.cpp
c-cpp/tests/CMakeModules/: Findgoogletest.cmake
cast/: lele_test_static_cast.cpp
cmake/: Makefile  README.md  cmake_install.cmake
cmake/cmake_script/: CMakeLists.txt  readme.md
cmake/cmake_script/CMakeModules/: Findcpptests.cmake
cmake/cmake_script/exist/: CMakeLists.txt
cmake/cmake_script/sub1/: CMakeLists.txt
cmake_compile/: CMakeCache.txt  CMakeLists.txt
color/: lele_test_color.cpp  lele_test_color2.cpp
comment/: lele_test_comments.cpp
cond/: Makefile  lele_test_condwait.cpp
curl/: .ycm_extra_conf.py  lele_test_curl.cpp
cycfork/: lele_test_for_fork.cpp
define/: a.out  lele_test_define.cpp
des/: des.cpp
design-pattern/: singleton.cpp  singleton.h
destruct/: Makefile  lele_test_destruct  lele_test_destruct.cpp
dl/: add.cpp  add.h  lele_test_dl.cpp
emptystring/: emptystring.cpp
endian/: Makefile  lele_test_endian  lele_test_endian.cpp
epoll/: lele_test_client  lele_test_client.cpp  lele_test_server  lele_test_server.cpp  socket.hpp  socketException.hpp
esccode/: loadBar  loadBar.c  loadBar1.c
fflush/: lele_test_fflush.cpp
fix/: calculateMetrics.cpp
gbktoutf8/: GbkToUtf8.cpp  IsTextUTF8.cpp  TestToUTF8.cpp  lele_test_ufttogbk.cpp
gdb/: Makefile  lele_test_gdb  lele_test_gdb.cpp
getcurrtime/: lele_test_getcurrent.cpp
getnameinfo/: main.cpp
getopt/: lele_test_getopt_long.cpp  readme.md  wingetopt.c
git/: README.md
globle/: Main  Main.cpp  common.h  globleref1.cpp  makefile  readme
hack/: lele_test_1.cpp
http/: Makefile  lele_test_http  lele_test_http.cpp
inline/: lele_test_inline.cpp
is_blank/: lele_test_is_blank.cpp
macro/: lele_test_macro.cpp
makefile/: Makefile
markdown/: README.md  markdown.tutorial  readme.md
mem/: lele_test_memcpy.cpp
mkdir/: lele_test_mkdir.cpp
mutex/: Makefile  lele_test_pthread_mutex.cpp  lele_test_pthread_mutex_bak_2015_05_29_23_50.cpp  lele_test_pthread_mutex_bak_2016_02_26.cpp
pointer/: lele_test_pointer.cpp
ptrtoptr/: README.md  lele_test_movestr.cpp
python/: parseErrorCode.py
rand/: Makefile
(+226 files in other folders)
