#add_subdirectory(${GTEST_SOURCE_DIR} ${CMAKE_BINARY_DIR}/googletest)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
MESSAGE(STATUS "CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
find_package("googletest" REQUIRED)

if (GOOGLETEST_FOUND)
    add_subdirectory(${GTEST_SOURCE_DIR} ${CMAKE_BINARY_DIR}/googletest)
    include_directories(SYSTEM ${GTEST_INCLUDE_DIR})
    add_test(NAME gtest COMMAND gunittest)
    ADD_EXECUTABLE(gunittest GTests.cpp GTestCase.cpp)
    target_link_libraries(gunittest gtest gtest_main)
else(GOOGLETEST_FOUND)
    MESSAGE(STATUS "GOOGLETEST NOT FOUND")
endif(GOOGLETEST_FOUND)

add_test(NAME unittests COMMAND unittests)
add_test(NAME hello2 COMMAND hello2)
ADD_EXECUTABLE(unittests HelloWorldTests.cpp)
ADD_EXECUTABLE(hello2 HelloWorldTests2.cpp)
